# structools

structools/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Test dataframe.xlsx  dev.py  dev2.py  dev3.py  pyproject.toml  setup.txt  test.ipynb
structools/docs/: Makefile  conf.py  example.ipynb  make.bat
structools/src/structools/: __init__.py
structools/src/structools/backtest/: backtester.py
structools/src/structools/products/: autocalls.py  basic_products.py
structools/src/structools/streamlit/: app_main.py
structools/src/structools/streamlit/pages/: backtester.py  home.py  product_builder.py  underlying_builder.py
structools/src/structools/tools/: date_tools.py  market.py
structools/tests/: params.py  test_backtest.py  test_market.py  test_products.py  test_structools.py
