[tool.poetry]
name = "structools"
version = "0.0.0"
description = ": Helpful tools for QIS and Pricing Structuring teams"
authors = ["Romain Pifaut"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
