[tool.poetry]
name = "structools"
version = "0.17.1"
description = ": Helpful tools for QIS and Pricing Structuring teams"
authors = ["Romain Pifaut"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
python-semantic-release = "^9.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
version_toml = [
"pyproject.toml:tool.poetry.version",
]